[package]
name = "verify"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { version = "3.2", features = ["verify"] }
hex = "0.4"
serde_cbor = "0.11"
log = "0.4"
lib = { path = "../lib" }

[dependencies.sha2]
git = "https://github.com/sp1-patches/RustCrypto-hashes"
tag = "sha2-v0.10.8-patch-v1"

