[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "3.2"
sp1-recursion-core = "3.2"
serde = "1.0"
serde_cbor = "0.11"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
sha2 = "0.10"
lib = { path = "../lib" }

[build-dependencies]
sp1-build = "3.2"
